--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-awesome": "^3.2.0",
+		"svelte-awesome-icons": "^0.4.4",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
